Improve visibility of correct background, add reset to round number

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,9 @@ body{
 }
 
 @keyframes shape-correct{
-    0% {background-color: rgb(36, 136, 36);}
+    0% {background-color: rgb(94, 255, 0);}
+    50% {background-color: white;}
+    75% {background-color: rgb(94, 255, 0);}
     100% {background-color: white;}
 }
 
